Bnetserver implement rpc service of bnetserver